--- a/tut1/Makefile
+++ b/tut1/Makefile
@@ -1,14 +1,42 @@
-OUT_FILES=prog1 prog2 prog3 prog4 prog5 prog6 prog7 prog8 prog9 prog10 prog11 prog12
-
-all: ${OUT_FILES}
+CC=gcc
+C_FLAGS=-Wall -fsanitize=address,undefined
 
 prog1: prog1.c
-	gcc -Wall -fsanitize=address,undefined -o prog1 prog1.c
+	${CC} ${C_FLAGS} -o prog1.out prog1.c
 
 prog2: prog2.c
-	gcc -Wall -fsanitize=address,undefined -o prog2 prog2.c
+	${CC} ${C_FLAGS} -o prog2.out prog2.c
 
-.PHONY: clean_all all
+prog3: prog3.c
+	${CC} ${C_FLAGS} -o prog3.out prog3.c
 
-clean_all:
-	rm ${OUT_FILES}
+prog4: prog4.c
+	${CC} ${C_FLAGS} -o prog4.out prog4.c
+
+prog5: prog5.c
+	${CC} ${C_FLAGS} -o prog5.out prog5.c
+
+prog6: prog6.c
+	${CC} ${C_FLAGS} -o prog6.out prog6.c
+
+prog7: prog7.c
+	${CC} ${C_FLAGS} -o prog7.out prog7.c
+
+prog8: prog8.c
+	${CC} ${C_FLAGS} -o prog8.out prog8.c
+
+prog9: prog9.c
+	${CC} ${C_FLAGS} -o prog9.out prog9.c
+
+prog10: prog10.c
+	${CC} ${C_FLAGS} -o prog10.out prog10.c
+
+prog11: prog11.c
+	${CC} ${C_FLAGS} -o prog11.out prog11.c
+
+prog12: prog12.c
+	${CC} ${C_FLAGS} -o prog12.out prog12.c
+
+.PHONY: clean
+clean:
+	rm -f *.out
