--- a/tut2/Makefile
+++ b/tut2/Makefile
@@ -7,6 +7,9 @@ prog13: prog13.c
 prog14: prog14.c
 	${CC} ${C_FLAGS} -o prog14.out prog14.c
 
+prog15: prog15.c
+	${CC} ${C_FLAGS} -o prog15.out prog15.c
+
 .PHONY: clean
 clean:
 	rm -f *.out
